feat: dry run
